<resources>
    <string name="app_name">CookBook</string>
    <string name="Comments">Comments</string>
    <string name="Instructions">Instructions</string>
    <string name="Ingredients">Ingredients</string>
    <string name="Recipe_Title">Recipe Title</string>
    <string name="User_ID">User ID</string>
    <string name="Comment_Text">Comment Text</string>
    <string name="Search">Search</string>
    <string name="Name">Name</string>
    <string name="Info">Info</string>
    <string name="New_Recipe_Title">New Recipe</string>
    <string name="new_recipe_description_title">Recipe Descrioption</string>
    <string name="new_recipe_description">Descrioption....</string>
    <string name="new_recipe_ingredients_title">Ingredients</string>
    <string name="new_recipe_ingredients">Ingredients</string>
    <string name="new_recipe_instructions_title">Instructions</string>
    <string name="new_recipe_instructions">Instructions.....</string>
    <string name="new_recipe_name_title">Recipe Name</string>
    <string name="new_recipe_name">Recipe Name</string>
    <string name="new_recipe_image_title">Add Image</string>
    <string name="new_recipe_tags_title">Add Tags</string>
    <string name="new_recipe_tags">Add Tags.....</string>
    <string name="Submit">Submit</string>
    <string name="new_recipe_ingredients_name">Ingredient</string>
    <string name="new_recipe_ingredients_amount">Amount</string>
    <string name="Add">Add</string>
    <string name="SignUp">SignUp</string>
    <string name="SignIn">Sign In</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="Recipe_Date">12/12/2023 12:12</string>
    <string name="follow_user">Follow user</string>
    <string name="enter_user_email">Enter user email</string>
    <string name="edit_info">Edit Info</string>
    <string name="bio">BIO</string>
    <string name="save">Save</string>
    <string name="Ingredient" >Ingredient</string>
    <string name="type">Type</string>
    <string name="follow_name">Follow Name</string>
    <string name="unfollow">Unfollow</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="Followers" >Followers</string>
    <string name="change_pic">Change Pic</string>
    <string name="edit_info_btn">Edit Info</string>
    <string name="logout">Logout</string>
    <string name="no_recipes_to_show">No Recipes to show</string>
    <string name="new_recipes">New</string>
    <string name="follow">Follow</string>
    <string name="favorite">Favorite</string>
    <string name="login">Login</string>
    <string name="new_acount">New? click here for Create an account</string>
    <string name="password_again">Password again…</string>
    <string name="Add_Cmments">Add Comment</string>

</resources>