<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <androidx.cardview.widget.CardView
        android:id="@+id/comment_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="2dp">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <!-- User ID or Name -->
        <TextView
            android:id="@+id/usernameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/User_ID"
            android:textSize="16sp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/emailTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="11sp"
            android:textStyle="italic"/>

        <!-- Comment Text -->
        <TextView
            android:id="@+id/comment_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Comment_Text"
            android:textSize="14sp"/>

    </LinearLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>