<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.LoginActivity"
    android:background="@color/theme_2">
<!--    <com.google.android.material.button.MaterialButton-->
<!--        android:id="@+id/login_BTN_signout"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="signout"-->
<!--        android:layout_centerInParent="true"-->
<!--        />-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:padding="20dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/login_TV_have_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="55dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="12dp"
            android:text="do you already have an account?" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_BTN_signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_TV_have_account"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="22dp"
            android:background="@drawable/button_background"
            android:text="@string/SignIn"
            app:backgroundTint="@null"
            android:layout_centerHorizontal="true"
            />


        <LinearLayout
            android:id="@+id/login_LLO_signin_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_above="@+id/login_TV_signin"
            android:background="@drawable/segment_border"
            android:layout_margin="12dp"
            android:padding="12dp"
            >

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/firstname"/>

            <EditText
                android:id="@+id/login_ET_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="first name"
                android:layout_marginHorizontal="16dp"/>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lastname"/>
            <EditText
                android:id="@+id/login_ET_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:hint="last name"/>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"/>
            <EditText
                android:id="@+id/login_ET_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:hint="email"/>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"/>
            <EditText
                android:id="@+id/login_ET_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:hint="password"/>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"/>
            <EditText
                android:id="@+id/login_ET_password_again"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:hint="password again"/>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_BTN_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/SignUp"
                app:backgroundTint="@null"
                android:background="@drawable/button_background"
                android:layout_gravity="center"
                />
        </LinearLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/login_TV_signin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="22dp"
            android:text="Create an account? click here..."
            android:textStyle="italic" />


    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>