<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".UI.Fragments.NewRecipeFragment">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/segment_border"
            android:layout_margin="2dp"
            android:padding="2dp"
            >
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/new_recipe_TV_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/New_Recipe_Title"
                android:gravity="center"
                android:layout_margin="16dp"
                android:textStyle="bold"
                android:textSize="28sp"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/new_recipe_TV_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_recipe_name_title"
                android:gravity="start"
                android:layout_margin="12dp"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_below="@+id/new_recipe_TV_title"
                />

            <EditText
                android:id="@+id/new_recipe_ET_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/new_recipe_TV_name"
                android:layout_marginStart="12dp"
                android:layout_marginTop="23dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="12dp"
                android:gravity="start"
                android:hint="@string/new_recipe_name"
                android:textSize="16sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/new_recipe_TV_ingredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/new_recipe_ET_name"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="12dp"
                android:gravity="start"
                android:text="@string/new_recipe_ingredients_title"
                android:textSize="16sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/new_recipe_LST_ingredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/new_recipe_TV_ingredients"
                android:layout_centerInParent="true"
                android:layout_marginTop="4dp"
                tools:listitem="@layout/ingredient_item" />

            <LinearLayout
                android:id="@+id/new_recipe_LL_ingredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/new_recipe_LST_ingredients"
                android:orientation="horizontal"
                >
                <EditText
                    android:id="@+id/new_recipe_ET_ingredients_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:layout_marginStart="1dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="1dp"
                    android:layout_marginBottom="12dp"
                    android:layout_gravity="center_vertical"
                    android:hint="@string/new_recipe_ingredients_name"
                    android:textSize="16sp" />
                <EditText
                    android:id="@+id/new_recipe_ET_ingredients_amount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="1dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="1dp"
                    android:layout_marginBottom="12dp"
                    android:layout_gravity="center_vertical"
                    android:hint="@string/new_recipe_ingredients_amount"
                    android:textSize="16sp"
                    />
                    <Spinner
                        android:id="@+id/Ingredient_Spinner_Type"
                        android:layout_height="wrap_content"
                        android:layout_width="0dp"
                        android:layout_weight="2"
                        android:layout_marginStart="1dp"
                        android:hint="Amount"
                        android:layout_margin="4dp"
                        android:layout_gravity="center_vertical"
                        />
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/new_recipe_BTN_ingredients_add"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:icon="@drawable/plus_icon"
                    android:layout_gravity="center_vertical"
                    app:backgroundTint="@null"
                    android:background="@drawable/button_background"
                    />

            </LinearLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/new_recipe_TV_instructions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_recipe_instructions_title"
                android:gravity="start"
                android:layout_margin="12dp"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_below="@+id/new_recipe_LL_ingredients"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/new_recipe_LST_instructions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/new_recipe_TV_instructions"
                android:layout_centerInParent="true"
                android:layout_marginTop="4dp"
                tools:listitem="@layout/instruction_item" />
            <LinearLayout
                android:id="@+id/new_recipe_LL_instructions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/new_recipe_LST_instructions"
                >
                <EditText
                    android:id="@+id/new_recipe_ET_instructions"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:hint="@string/new_recipe_instructions"
                    android:gravity="start"
                    android:layout_margin="12dp"
                    android:textSize="16sp"
                    />
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/new_recipe_BTN_instructions_add"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:icon="@drawable/plus_icon"
                    android:layout_gravity="center"
                    app:backgroundTint="@null"
                    android:background="@drawable/button_background"/>
            </LinearLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/new_recipe_TV_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_recipe_image_title"
                android:gravity="start"
                android:layout_margin="12dp"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_below="@+id/new_recipe_LL_instructions"
                />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/new_recipe_SIV_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/new_recipe_TV_image"
                android:src="@drawable/default_recipe_image"
            />

<!--            <com.google.android.material.textview.MaterialTextView-->
<!--                android:id="@+id/new_recipe_TV_tags"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/new_recipe_tags_title"-->
<!--                android:gravity="start"-->
<!--                android:layout_margin="12dp"-->
<!--                android:textStyle="bold"-->
<!--                android:textSize="16sp"-->
<!--                android:layout_below="@+id/new_recipe_SIV_image"-->
<!--                />-->

<!--            <EditText-->
<!--                android:id="@+id/new_recipe_ET_tags"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:hint="@string/new_recipe_tags"-->
<!--                android:gravity="start"-->
<!--                android:layout_margin="12dp"-->
<!--                android:textSize="16sp"-->
<!--                android:layout_below="@+id/new_recipe_TV_tags"-->
<!--                />-->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/new_recipe_MBTN_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_centerInParent="true"
                android:text="@string/Submit"
                android:textColor="@color/theme_2"
                app:backgroundTint="@null"
                android:background="@drawable/button_background"
                android:layout_below="@+id/new_recipe_SIV_image"/>

        </RelativeLayout>

    </FrameLayout>
</ScrollView>
