<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <androidx.cardview.widget.CardView
        android:id="@+id/recipe_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        android:backgroundTint="@color/theme_3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Recipe Image -->

        <!--         Recipe Title -->
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/recipe_image"
            android:layout_width="match_parent"
            android:layout_height="188dp"
            android:src="@drawable/default_recipe_image"
            android:layout_margin="8dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/recipe_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="8dp"
                    android:text="@string/Recipe_Title"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_gravity="start"
                    />

                <TextView
                    android:id="@+id/recipe_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginTop="-8dp"
                    android:layout_marginHorizontal="8dp"
                    android:text="@string/Recipe_Date"
                    android:textSize="11sp"
                    android:textStyle="italic"
                    android:layout_gravity="start"
                    />
            </LinearLayout>



            <LinearLayout
                android:id="@+id/recipe_rating_clickable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:orientation="horizontal">

                <RatingBar
                    android:id="@+id/recipe_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:numStars="1"
                    android:scaleX="1"
                    android:scaleY="1"
                    android:stepSize="1"
                    android:isIndicator="true" />

            </LinearLayout>

        </LinearLayout>


        <!-- Recipe Ingredients -->
        <TextView
            android:id="@+id/recipe_ingredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/Ingredients"
            android:textSize="14sp" />

        <!-- Recipe Instructions -->
        <TextView
            android:id="@+id/recipe_instructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/Instructions"
            android:textSize="14sp" />

        <RelativeLayout
            android:id="@+id/recipe_RLO_seg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@color/theme_3"
            android:clickable="true"
            android:focusable="false"
            android:focusableInTouchMode="false"
            >

            <TextView
                android:id="@+id/recipe_comments_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="32dp"
                android:padding="8dp"
                android:text="@string/Comments"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:ignore="HardcodedText" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/recipe_comments_SIV_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="32dp"
                android:scaleType="fitCenter"
                android:src="@drawable/plus_icon" />


        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recipe_LST_comments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbarStyle="outsideOverlay"
            android:scrollbars="vertical"
            android:layout_centerInParent="true"
            tools:listitem="@layout/comment_item"
            android:background="@color/theme_3"

            />

        <LinearLayout
            android:id="@+id/home_LLO_comments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="8dp"
            android:background="@drawable/segment_border"
            >
            <LinearLayout
                android:id="@+id/home_LLO_comments_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="8dp"
                android:clickable="true"
                >
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Add Comment"
                    android:layout_marginTop="4dp"
                    android:layout_marginHorizontal="4dp"/>
                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/home_SIV_comments_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/plus_icon"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="400dp"
                android:orientation="horizontal"
                android:background="@color/theme_3"
                android:layout_margin="8dp"
                >

                <EditText
                    android:id="@+id/home_ET_comments"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:layout_marginHorizontal="12dp"
                    />
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/home_BTN_comments"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Add"
                    android:layout_gravity="center"
                    app:backgroundTint="@null"
                    android:background="@drawable/button_background"/>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>

</RelativeLayout>